feat: add ride guidance API
